# table-challenger

./: Readme.md
be-python/: pyproject.toml
be-python/scripts/: init_all_data.py  init_user.py  json-schema.sh
be-python/table_challenge_be/: __init__.py
be-python/table_challenge_be/internal/: gomoku.py  users.py
be-python/table_challenge_be/models/: gomoku.py  user.py
be-python/table_challenge_be/routers/: gomoku.py  users.py
fe-svelte/: .prettierrc.toml  package.json
fe-svelte/scripts/: compile-json-schema.js
fe-svelte/src/lib/: API_HOST.ts  gomoku.ts  safeInterval.ts  store.ts  user.ts
fe-svelte/src/lib/components/: EmbedUserName.svelte
fe-svelte/src/lib/types/: gomoku.d.ts  user.d.ts
fe-svelte/src/routes/: index.svelte
fe-svelte/src/routes/gomoku/: index.svelte
fe-svelte/src/routes/user/: [uid].svelte  index.svelte
json-schemas/: gomoku.json  user.json
