[tool.poetry]
name = "table-challenge-be"
version = "0.1.0"
description = ""
authors = ["Xu Siyuan <inqb@protonmail.com>"]
license = "GPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
sqlitedict = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
